1.0a8 (2009-07-01)
==================

- Deprecate the ``authentication_policy`` and ``authorization_policy``
  arguments to ``repoze.bfg.router.make_app``.  Instead, developers
  should use the various authentication policy ZCML directives
  (``repozewho1authenticationpolicy``,
  ``remoteuserauthenticationpolicy`` and
  ``authtktauthenticationpolicy``) and the `aclauthorizationpolicy``
  authorization policy directive as described in the changes to the
  "Security" narrative documenation chapter and the wiki tutorials.

- Add three new ZCML directives which configure authentication
  policies:

  - ``repozewho1authenticationpolicy``

  - ``remoteuserauthenticationpolicy``

  - ``authtktauthenticationpolicy``

- Add a new ZCML directive which configures an ACL authorization
  policy named ``aclauthorizationpolicy``.

- Bug fix: when a ``repoze.bfg.resource.PackageOverrides`` class was
  instantiated, and the package it was overriding already had a
  ``__loader__`` attribute, it would fail at startup time, even if the
  ``__loader__`` attribute was another PackageOverrides instance.  We
  now replace any ``__loader__`` that is also a PackageOverrides
  instance.  Symptom: ``ConfigurationExecutionError: <type
  'exceptions.TypeError'>: Package <module 'karl.views' from
  '/Users/chrism/projects/osi/bfgenv/src/karl/karl/views/__init__.pyc'>
  already has a __loader__ (probably a module in a zipped egg)``.

1.0a7 (2009-06-30)
==================

- Add a ``reload_resources`` configuration file setting (aka the
  ``BFG_RELOAD_RESOURCES`` environment variable).  When this is set to
  true, the server never needs to be restarted when moving files
  between directory resource overrides (esp. for templates currently).

- Add a ``reload_all`` configuration file setting (aka the
  ``BFG_RELOAD_ALL`` environment variable) that implies both
  ``reload_resources`` and ``reload_templates``.

- The ``static`` helper view class now uses a ``PackageURLParser`` in